<resources>
    <string name="app_name">OphthalmicAdmin</string>
    <string name="invalidEmail">Invalid Email</string>
    <string name="invalidPassword">Invalid Password,password should contains letters ans chars more than 8 characters</string>
    <string name="invalidPhone">Invalid Phone</string>
    <string name="fieldRequired">Required</string>
    <string name="connection_invaild_msg">Check Your internet conection</string>
    <string name="signInTitle">Sign in to your account</string>
    <string name="authEmail">Email</string>
    <string name="password">password</string>
    <string name="forgetPassword">forget password</string>
    <string name="login">Sign In</string>
    <string name="register">Sign up</string>
    <string name="forgetPasswordEmail">Please write your email to reset your password</string>
    <string name="send">Send</string>
    <string name="signUp">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="addressPhone">Phone</string>
    <string name="home">Home</string>
    <string name="menuHome">Home</string>
    <string name="reserve">Appointment Booking</string>
    <string name="menuMedicalRecord">Medical record</string>
    <string name="menuMyAppointment">My booking</string>
    <string name="menuNotifications">Notifications</string>
    <string name="menuCategory">Department</string>
    <string name="menuContact">Contact Us</string>
    <string name="menuLogout">Log out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="exitText">Are you sure</string>
    <string name="bookingTitle">Reservation</string>
    <string name="workingDays">Working days</string>
    <string name="medicalNote">Doctor notes</string>
    <string name="medicalMedicine">Medicine</string>
    <string name="medicalRays">X Rays</string>
    <string name="status">Status</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="contactMessage">Your message</string>
    <string name="doctors">Doctors</string>
    <string name="doctorProfileTitle">Doctor profile</string>
    <string name="degree">Degree</string>
    <string name="medicineHint">No medicine approved</string>
    <string name="noteHint">No notes approved</string>
    <string name="xRaysHint">No X-Rays approved</string>
    <string name="updateAuth">Email/Password</string>
    <string name="updateData">Name/Phone</string>
    <string name="saveImage">Update Image</string>
    <string name="departmentDetails">Department News</string>
    <string name="newPost">New post</string>
    <string name="Diagnosis">Diagnosis</string>
    <string name="newPostContent">Write your content here</string>
    <string name="updateProfile">Edit extra data</string>
    <string name="patientNumber">Patient number</string>
    <string name="specialist">Specialist</string>
    <string name="departments">Departments</string>
    <string name="futureReservations">On going</string>
    <string name="currentReservations">Waiting</string>
    <string name="oldReservations">Finished</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="rejectReason">Write reject reason</string>
    <string name="addDoctor">Add doctor</string>
    <string name="department">Departments</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Monday">Monday</string>
    <string name="workingDaysDesc">Please choose doctor working days</string>
    <string name="add_new_department">New department</string>
    <string name="desc">Description</string>
    <string name="edit_department">Edit department</string>
    <string name="addSpecialist">Add specialist</string>
    <string name="labName">Lab name</string>
    <string name="labNumber">Lab number</string>
    <string name="specialistUpdateStatus">Reservation details</string>
    <string name="updateImageText">Please choose X-Ray image</string>
    <string name="result">Result</string>

</resources>
