<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="adminDoctorsViewModel"
            type="app.grand.ophthalmicadmin.admin.doctors.viewModels.AdminDoctorsViewModels" />


    </data>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.adminpages.doctors.DoctorsActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:onClick="@{()->adminDoctorsViewModel.goBack(context)}"
                        android:src="@drawable/ic_back" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:text="@string/addDoctor"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/white" />
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/uploaded_img"
                android:layout_width="@dimen/dp80w"
                android:layout_height="@dimen/dp80h"
                android:layout_marginTop="@dimen/dp8h"
                android:onClick="@{()->adminDoctorsViewModel.selectImage()}"
                android:src="@drawable/doctor"
                app:civ_border_color="@color/colorAccent"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputUserName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp8w"
                android:layout_marginTop="@dimen/dp16h"
                android:layout_marginEnd="@dimen/dp8w"
                android:hint="@string/name"
                android:textColorHint="@color/black"
                app:helperTextTextColor="@color/error_clr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/uploaded_img">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:text="@={adminDoctorsViewModel.addDoctorRequest.user_name}"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp8w"
                android:layout_marginTop="@dimen/dp16h"
                android:layout_marginEnd="@dimen/dp8w"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                app:helperTextTextColor="@color/error_clr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputUserName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:inputType="textEmailAddress"
                    android:text="@={adminDoctorsViewModel.addDoctorRequest.email}"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPhone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp8w"
                android:layout_marginTop="@dimen/dp16h"
                android:layout_marginEnd="@dimen/dp8w"
                android:hint="@string/addressPhone"
                android:textColorHint="@color/black"
                app:helperTextTextColor="@color/error_clr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:inputType="phone"
                    android:text="@={adminDoctorsViewModel.addDoctorRequest.phone}"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp8w"
                android:layout_marginTop="@dimen/dp16h"
                android:layout_marginEnd="@dimen/dp8w"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                app:helperTextTextColor="@color/error_clr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputPhone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:inputType="textPassword"
                    android:text="@={adminDoctorsViewModel.addDoctorRequest.password}"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputDepartment"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp8w"
                android:layout_marginTop="@dimen/dp16h"
                android:layout_marginEnd="@dimen/dp8w"
                android:hint="@string/department"
                android:textColorHint="@color/black"
                app:helperTextTextColor="@color/error_clr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userDepartment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_arrow_down"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:inputType="phone"
                    android:onClick="@{()-> adminDoctorsViewModel.toDegree()}"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPatient"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp8w"
                android:layout_marginTop="@dimen/dp16h"
                android:layout_marginEnd="@dimen/dp8w"
                android:hint="@string/patientNumber"
                android:textColorHint="@color/black"
                app:helperTextTextColor="@color/error_clr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputDepartment">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userPatient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:inputType="number"
                    android:text="@={adminDoctorsViewModel.addDoctorRequest.patientNumber}"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputDegree"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp8w"
                android:layout_marginTop="@dimen/dp16h"
                android:layout_marginEnd="@dimen/dp8w"
                android:hint="@string/degree"
                android:textColorHint="@color/black"
                app:helperTextTextColor="@color/error_clr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputPatient">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userDegree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:text="@={adminDoctorsViewModel.addDoctorRequest.degree}"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp8w"
                android:layout_marginTop="@dimen/dp16h"
                android:text="@string/workingDaysDesc"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputDegree" />

            <CheckBox
                android:id="@+id/ch_Saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp4h"
                android:text="@string/Saturday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/ch_Tuesday"
                app:layout_constraintTop_toBottomOf="@+id/textview" />

            <CheckBox
                android:id="@+id/ch_Sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp4h"
                android:text="@string/Sunday"

                app:layout_constraintEnd_toStartOf="@+id/ch_Monday"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview" />

            <CheckBox
                android:id="@+id/ch_Monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp4h"
                android:text="@string/Monday"

                app:layout_constraintEnd_toStartOf="@+id/ch_Tuesday"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/ch_Sunday"
                app:layout_constraintTop_toBottomOf="@+id/textview" />

            <CheckBox
                android:id="@+id/ch_Tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp4h"
                android:text="@string/Tuesday"

                app:layout_constraintEnd_toStartOf="@+id/ch_Saturday"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/ch_Monday"
                app:layout_constraintTop_toBottomOf="@+id/textview" />

            <CheckBox
                android:id="@+id/ch_Wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Wednesday"
                app:layout_constraintEnd_toStartOf="@+id/ch_Thursday"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ch_Sunday" />

            <CheckBox
                android:id="@+id/ch_Thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Thursday"
                app:layout_constraintEnd_toStartOf="@+id/ch_Friday"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/ch_Wednesday"
                app:layout_constraintTop_toBottomOf="@+id/ch_Sunday" />

            <CheckBox
                android:id="@+id/ch_Friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Friday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/ch_Thursday"
                app:layout_constraintTop_toBottomOf="@+id/ch_Tuesday" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addNewDoctor"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/dp15h"
                android:background="@drawable/corner_view_primary_dark"
                android:onClick="@{()->adminDoctorsViewModel.checkErrors()}"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ch_Friday" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</layout>