<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="reserveViewModel"
            type="app.grand.ophthalmicadmin.specialist.reservations.viewModels.SpecialistReservationsViewModels" />
    </data>


    <ScrollView
        android:id="@+id/loginView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/customToolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp8w">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:onClick="@{()-> reserveViewModel.goBack(context)}"
                        android:src="@drawable/ic_back" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/specialistUpdateStatus"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/white" />
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp16h"
                android:background="@drawable/corner_view_primary_border"
                android:padding="@dimen/dp8h"
                android:text="@{reserveViewModel.passingObject.raysModel.x_ray_name}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp16h"
                android:text="@string/updateImageText"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/dp100w"
                android:layout_height="@dimen/dp100h"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp15h"
                android:onClick="@{()->reserveViewModel.selectImage()}"
                android:src="@color/overlayBackground" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputDesc"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp16h"
                android:hint="@string/desc"
                android:textColorHint="@color/black"
                app:helperTextTextColor="@color/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:text="@={reserveViewModel.resultDesc}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/overlayBackground" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp16h"
                android:hint="@string/result"
                android:textColorHint="@color/black"
                app:helperTextTextColor="@color/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputUserName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp100h"
                    android:gravity="top"
                    android:inputType="text"
                    android:text="@={reserveViewModel.result}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/overlayBackground" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp16h"
                android:background="@drawable/corner_view_primary_dark"
                android:onClick="@{()-> reserveViewModel.updateRaysImage()}"
                android:text="@string/saveImage"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputUserName" />

        </LinearLayout>

    </ScrollView>


</layout>