<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="departmentViewModel"
            type="app.grand.ophthalmicadmin.admin.department.viewModels.SettingsViewModels" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:onClick="@{()->departmentViewModel.goBack(context)}"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/add_new_department"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/uploaded_img"
            android:layout_width="@dimen/dp80w"
            android:layout_height="@dimen/dp80h"
            android:layout_marginTop="@dimen/dp8h"
            android:onClick="@{()->departmentViewModel.selectImage()}"
            android:src="@drawable/department"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputDepartment"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp8w"
            android:layout_marginTop="@dimen/dp16h"
            android:layout_marginEnd="@dimen/dp8w"
            android:hint="@string/name"
            android:textColorHint="@color/black"
            app:helperTextTextColor="@color/error_clr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uploaded_img">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userDepartment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                android:inputType="text"
                android:text="@={departmentViewModel.addDepartmentRequest.name}"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputDepartmentDesc"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp8w"
            android:layout_marginTop="@dimen/dp16h"
            android:layout_marginEnd="@dimen/dp8w"
            android:hint="@string/desc"
            android:textColorHint="@color/black"
            app:helperTextTextColor="@color/error_clr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputDepartment">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userDepartmentDesc"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp100h"
                 android:gravity="top"
                android:inputType="text"
                android:text="@={departmentViewModel.addDepartmentRequest.desc}"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp16h"
            android:background="@drawable/corner_view_primary_dark"
            android:onClick="@{()-> departmentViewModel.addDepartment()}"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputDepartmentDesc" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>